--- a/src/app/components/contract/contract.component.scss
+++ b/src/app/components/contract/contract.component.scss
@@ -2,40 +2,17 @@
   display: block;
   height: 100%;
 }
-
 :host ::ng-deep .p-splitter {
   width: 100%;
   height: 100%;
 }
-
-.flex {
-  display: flex;
-}
-.flex-col {
-  flex-direction: column;
-}
-.gap-4 {
-  gap: 1rem;
-}
-
 :host ::ng-deep .p-datatable {
   .p-datatable-tbody > tr {
     transition: background-color 0.15s;
-    
-    &:hover {
-      background-color: #f9fafb !important;
-    }
-    
-    &.p-highlight {
-      background-color: #dbeafe !important;
-    }
-    
-    td {
-      padding: 0.5rem !important;
-      border-bottom: 1px solid #e5e7eb;
-    }
+    &:hover { background-color: #f9fafb !important; }
+    &.p-highlight { background-color: #dbeafe !important; }
+    td { padding: 0.5rem !important; border-bottom: 1px solid #e5e7eb; }
   }
-  
   .p-datatable-thead > tr > th {
     background-color: #f3f4f6;
     padding: 0.5rem !important;
