--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -9,7 +9,10 @@
 >
   <!-- Panel 1: 左側 -->
   <ng-template #panel>
-    <div class="flex flex-col items-center justify-center h-full gap-2">
+    <div class="flex flex-col items-center justify-start h-full gap-2">
+      <div class="w-full organization-chart-top">
+        <p-organizationChart [value]="[selectedContract ? getOrgChartData(selectedContract) : getDefaultOrgChartData()]" styleClass="w-full"></p-organizationChart>
+      </div>
       <p-table [value]="contracts" styleClass="p-datatable-sm w-full" [tableStyle]="{ 'font-size': '13px' }" [responsiveLayout]="'scroll'"
         selectionMode="single" [(selection)]="selectedContract" dataKey="code" [rowHover]="true"
         (onRowSelect)="onRowSelect($event)">
