--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -11,7 +11,7 @@
   <ng-template #panel>
     <div class="flex flex-col items-center justify-start h-full gap-2">
       <div class="w-full organization-chart-top">
-        <p-organizationChart [value]="[selectedContract ? getOrgChartData(selectedContract) : getDefaultOrgChartData()]" styleClass="w-full" [collapsible]="true">
+        <p-organizationChart [collapsible]="true" [value]="[selectedContract ? getOrgChartData(selectedContract) : getDefaultOrgChartData()]" styleClass="w-full" >
           <ng-template let-node pTemplate="person">
             <div class="flex flex-col items-center">
               <span class="font-bold mb-1">{{ node.data.name || '—' }}</span>
