--- a/src/app/components/contract/stepbutton/create/create.component.html
+++ b/src/app/components/contract/stepbutton/create/create.component.html
@@ -16,8 +16,8 @@
                     <div class="mt-4">
                         <div class="font-bold mb-2">專案成員</div>
                         <div *ngFor="let m of members; let i = index" class="flex gap-2 mb-2">
-                            <input pInputText [(ngModel)]="m.name" placeholder="姓名" style="width: 100px;" />
-                            <input pInputText [(ngModel)]="m.role" placeholder="角色" style="width: 100px;" />
+                            <input pInputText [(ngModel)]="m.name" placeholder="姓名" class="w-100px" />
+                            <input pInputText [(ngModel)]="m.role" placeholder="角色" class="w-100px" />
                             <button pButton type="button" icon="pi pi-trash" class="p-button-text p-0" (click)="members.length > 1 && members.splice(i,1)" [disabled]="members.length <= 1"></button>
                         </div>
                         <button pButton type="button" label="新增成員" class="p-button-sm" (click)="members.push({name: '', role: ''})"></button>
