重構合約元件，移除請款相關邏輯，將請款功能獨立至 RequestComponent，簡化程式碼結構以提升可維護性與用戶體驗。

--- a/src/app/components/contract/stepbutton/request/request.component.html
+++ b/src/app/components/contract/stepbutton/request/request.component.html
@@ -1,6 +1,16 @@
-<div class="request-container">
-  <h2>Submit a Request</h2>
-  <button (click)="submitRequest()" [disabled]="requestInProgress">
-    {{ requestInProgress ? 'Submitting...' : 'Submit Request' }}
-  </button>
-</div>
+<p-dialog [visible]="visible" [modal]="true" [closable]="true" header="申請請款" [style]="{width: '400px'}" (onHide)="close()">
+  <form *ngIf="contract" (ngSubmit)="submitPayment()" class="flex flex-col gap-4">
+    <div class="flex gap-4">
+      <label>申請金額
+        <input pInputText type="number" [(ngModel)]="paymentAmount" name="paymentAmount" required (ngModelChange)="onPaymentAmountChange($event)" />
+      </label>
+      <label>百分比
+        <input pInputText type="number" [(ngModel)]="paymentPercent" name="paymentPercent" required min="0" max="100" (ngModelChange)="onPaymentPercentChange($event)" />
+      </label>
+    </div>
+    <label>備註
+      <input pInputText [(ngModel)]="paymentNote" name="paymentNote" />
+    </label>
+    <button pButton type="submit" label="送出" [disabled]="!paymentAmount || !paymentPercent"></button>
+  </form>
+</p-dialog>
