--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -67,7 +67,7 @@
             </td>
             <td (click)="$event.stopPropagation()">
               <button pButton type="button" icon="pi pi-plus-circle" class="p-button-text p-0"
-                (click)="applyPayment(contract)">申請</button>
+                (click)="requestComponent.open(contract, user)">申請</button>
             </td>
             <td (click)="$event.stopPropagation()">
               <app-file [contract]="contract" [uploadingContractCode]="uploadingContractCode" (uploading)="onUploading($event)" (uploaded)="onUploaded($event)"></app-file>
@@ -183,19 +183,5 @@
 <!-- =====================
   請款申請 Dialog
 ====================== -->
-<p-dialog [visible]="showRequest !== null" [modal]="true" [closable]="true" header="申請請款" [style]="{width: '400px'}" (onHide)="closeRequestDialog()">
-  <form *ngIf="showRequest" (ngSubmit)="submitPayment()" class="flex flex-col gap-4">
-    <div class="flex gap-4">
-      <label>申請金額
-        <input pInputText type="number" [(ngModel)]="paymentAmount" name="paymentAmount" required (ngModelChange)="onPaymentAmountChange($event)" />
-      </label>
-      <label>百分比
-        <input pInputText type="number" [(ngModel)]="paymentPercent" name="paymentPercent" required min="0" max="100" (ngModelChange)="onPaymentPercentChange($event)" />
-      </label>
-    </div>
-    <label>備註
-      <input pInputText [(ngModel)]="paymentNote" name="paymentNote" />
-    </label>
-    <button pButton type="submit" label="送出" [disabled]="!paymentAmount || !paymentPercent"></button>
-  </form>
-</p-dialog>
+<!-- 移除原本 p-dialog 區塊 -->
+<app-request #requestComponent (completed)="onRequestCompleted()"></app-request>
